--- a/frontend/phonebook-frontend/index.html
+++ b/frontend/phonebook-frontend/index.html
@@ -27,6 +27,7 @@
         </div>
     </main>
 
+    <script src="/js/config.js"></script>
     <script src="/js/auth.js"></script>
     <script>
         document.getElementById('logoutBtn').addEventListener('click', () => {
