--- a/frontend/phonebook-frontend/institutions.html
+++ b/frontend/phonebook-frontend/institutions.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </main>
-
+    <script src="/js/config.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/institutions.js"></script>
     <script>
