--- a/frontend/phonebook-frontend/members.html
+++ b/frontend/phonebook-frontend/members.html
@@ -82,6 +82,7 @@
         </div>
     </main>
 
+    <script src="/js/config.js"></script>
     <script src="/js/auth.js"></script>
     <script src="/js/members.js"></script>
     <script>
