--- a/frontend/phonebook-frontend/institutions.html
+++ b/frontend/phonebook-frontend/institutions.html
@@ -45,12 +45,10 @@
                     </tr>
                 </thead>
                 <tbody id="institutionsTableBody">
-                    <!-- Will be populated by JavaScript -->
                 </tbody>
             </table>
         </div>
 
-        <!-- Edit Modal -->
         <div id="editModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
@@ -80,6 +78,14 @@
                             <option value="false">Inactive</option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <label for="editRegion">Region</label>
+                        <input type="text" id="editRegion">
+                    </div>
+                    <div class="form-group">
+                        <label for="editAddress">Address</label>
+                        <input type="text" id="editAddress">
+                    </div>
                     <button type="submit" class="btn btn-primary">Save</button>
                 </form>
             </div>
@@ -93,11 +99,14 @@
             logout();
         });
 
-        // Check authentication
-        checkAuth().then(isAuthenticated => {
-            if (!isAuthenticated) {
+        // Check authentication and initialize the app
+        checkAuth().then(authStatus => {
+            if (!authStatus.authenticated) {
                 window.location.href = '/login.html';
             } else {
+                // Set the global isAdmin variable from institutions.js
+                isAdmin = authStatus.isAdmin;
+                // Now load the institutions
                 loadInstitutions();
             }
         });
